practica 5.02 casi acabada

--- a/Tema5/Practica5.01/Ejercicio2/ejercicio2.html
+++ b/Tema5/Practica5.01/Ejercicio2/ejercicio2.html
@@ -7,17 +7,7 @@
     <link rel="stylesheet" href="./ejercicio2.css">
 </head>
 <body>
-
-    <div class="pestañas">
-        <p>Pestaña 1</p>
-        <p>Pestaña 2</p>
-        <p>Pestaña 3</p>
-    </div>
-    <div class="info_pestañas">
-        <p>Información pestaña1</p>
-        <p>Información pestaña2</p>
-        <p>Información pestaña3</p>
-    </div>
+    <h1>Cambiar el color</h1>
 
     <script type="module" src="./ejercicio2.js"></script>
 </body>
