--- a/Tema5/Practica5.02/Ejercicio1/ejercicio1.html
+++ b/Tema5/Practica5.02/Ejercicio1/ejercicio1.html
@@ -9,11 +9,11 @@
 <body>
     <div class="contenedor_ejercicio">
         <div>Elemento 1</div>
-        <div>Contenido elemento 1</div>
+        <div class="contenedor_par">Contenido elemento 1</div>
         <div>Elemento 2</div>
-        <div>Contenido elemento 2</div>
+        <div class="contenedor_par">Contenido elemento 2</div>
         <div>Elemento 3</div>
-        <div>Contenido elemento 3</div>
+        <div class="contenedor_par">Contenido elemento 3</div>
     </div>
     
     <script type="module" src="./ejercicio1.js"></script>
