Puzle casi acabado

--- a/Tema5/Practica5.04/rompecabezas.html
+++ b/Tema5/Practica5.04/rompecabezas.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./rompecabezas.css">
 </head>
 <body>
+    <div id="zonaArrastrable">
+    </div>
+    <button id="botonReinicio">Reiniciar</button>
     
     <script type="module" src="./rompecabezas.js"></script>
 </body>
