--- a/Tema5/Practica5.04/rompecabezas.html
+++ b/Tema5/Practica5.04/rompecabezas.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./rompecabezas.css">
-</head>
-<body>
-    <div id="zonaArrastrable">
+    <link rel="stylesheet" href="./rompecabezas.css" />
+  </head>
+  <body>
+    <div id="zona_arrastrable">
+      <div id="piezas" class="soltable">
+        <img src="img/1.jpg" class="arrastrable" id="1" />
+        <img src="img/2.jpg" class="arrastrable" id="2" />
+        <img src="img/3.jpg" class="arrastrable" id="3" />
+        <img src="img/4.jpg" class="arrastrable" id="4" />
+        <img src="img/5.jpg" class="arrastrable" id="5" />
+        <img src="img/6.jpg" class="arrastrable" id="6" />
+        <img src="img/7.jpg" class="arrastrable" id="7" />
+        <img src="img/8.jpg" class="arrastrable" id="8" />
+        <img src="img/9.jpg" class="arrastrable" id="9" />
+      </div>
+      <div id="panel_juego">
+        <div class="soltable" id="1"></div>
+        <div class="soltable" id="2"></div>
+        <div class="soltable" id="3"></div>
+        <div class="soltable" id="4"></div>
+        <div class="soltable" id="5"></div>
+        <div class="soltable" id="6"></div>
+        <div class="soltable" id="7"></div>
+        <div class="soltable" id="8"></div>
+        <div class="soltable" id="9"></div>
+      </div>
+      <div id="reinicar">
+        <button id="boton_reinicio">Reinicar partida</button>
+      </div>
     </div>
-    <button id="botonReinicio">Reiniciar</button>
-    
+
     <script type="module" src="./rompecabezas.js"></script>
-</body>
+  </body>
 </html>
