--- a/Tema5/Practica5.05/indice.html
+++ b/Tema5/Practica5.05/indice.html
@@ -19,10 +19,12 @@
             <br><br>
             <label for="grupoOInterprete">Grupo de música o intérprete:</label>
             <input type="text" id="grupoOInterprete">
-            <br><br>
+            <div id="mensajeErrorInterprete"></div>
+            <br>
             <label for="anioPublicacion">Año de publicación:</label>
             <input type="text" id="anioPublicacion">
-            <br><br>
+            <div id="mensajeErrorAnio"></div>
+            <br>
             <label for="genero">Género:</label>
             <br>
             <input type="checkbox" id="reggaetón" name="genero">
