Formulario discos casi terminado

--- a/Tema6/Practica6.02/index.html
+++ b/Tema6/Practica6.02/index.html
@@ -11,6 +11,7 @@
     <div id="contenedor_enciclopedia">
         <div id="listado_peliculas"></div>
         <div id="contenedor_informacion" class="contenedor_oculto"></div>
+        <div id="contenedor_personaje"></div>
     </div>
     <script type="module" src="./main.js"></script>
 </body>
